# Data-Intensive-Computing-2021-Weather-Processing

./: .gitignore  Array1D.cpp  Array1D.h  CMakeLists.txt  ELEN4020_Project  FileReader.cpp  FileReader.h  HelperFunctions.cpp  HelperFunctions.h  Makefile  README.md  build.sh  main.cpp  storage.cpp
